Thread-safety improvements
  -- To fix possible deadlock by all update methods when using under
whenURI event thread.
  -- Also implemented asynchronous methods for getContentFormatter,
getContentChangeListeners and getDetachListeners methods, asynchronous
methods will prevent deadlock issue.